--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "1.20.0",
     "cors": "2.8.5",
     "express": "4.18.1",
-    "mongodb": "^4.10.0"
+    "mongodb": "4.10.0",
+    "swagger-jsdoc": "6.2.5",
+    "swagger-ui-express": "4.5.0"
   }
 }
