--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "body-parser": "1.20.0",
+    "celebrate": "^15.0.1",
     "cors": "2.8.5",
     "express": "4.18.1",
     "mongodb": "4.10.0",
