--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rest-api-basic",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "API Rest Básica, parte do Roadmap de Carreira em microservices e APIs",
   "type": "module",
   "main": "index.js",
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "body-parser": "1.20.0",
-    "celebrate": "^15.0.1",
+    "celebrate": "15.0.1",
     "cors": "2.8.5",
     "express": "4.18.1",
     "mongodb": "4.10.0",
