--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "JuninhoFreitas",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "npx nodemon index.js"
   },
   "dependencies": {
     "body-parser": "1.20.0",
