--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "1.20.0",
     "celebrate": "15.0.1",
     "cors": "2.8.5",
+    "dotenv": "^16.0.3",
     "express": "4.18.1",
     "mongodb": "4.10.0",
     "swagger-jsdoc": "6.2.5",
