--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "4.18.1",
     "mongodb": "4.10.0",
+    "nodemon": "^2.0.20",
     "swagger-jsdoc": "6.2.5",
     "swagger-ui-express": "4.5.0"
   }
